Fix css overlap

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 #content {
-  height: 100vh;
+  min-height: 100vh;
 
   display: flex;
   flex-direction: column;
@@ -48,7 +48,7 @@ main {
 
 form,
 .data {
-  width: 480px;
+  max-width: 480px;
 }
 
 form {
